--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   url_launcher: ^5.4.2
   location: ^3.2.1
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
