--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   location: ^3.2.1
   charts_flutter: ^0.9.0
   flutter_android: ^0.8.0
+  flutter_sms: ^2.1.1
 
 dev_dependencies:
   flutter_test:
