--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   charts_flutter: ^0.9.0
   flutter_android: ^0.8.0
   flutter_sms: ^2.1.1
+  youtube_player_flutter: ^7.0.0+7
 
 dev_dependencies:
   flutter_test:
