--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 12 19:14:04 IST 2021
-sdk.dir=C\:\\Users\\Aarushi\\AppData\\Local\\Android\\Sdk
+#Fri Mar 05 01:07:42 IST 2021
+sdk.dir=/Users/jharnadoda/Library/Android/sdk
