this is our FYP

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - images/heartrate.jpg
     - images/pharmacy.jpg
     - images/ps.jpg
+    - images/dumbbell.PNG
     #- assets/chemists.mp3
     #- assets/maps.mp3
 
